# FeastFlux

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
analytics/: admin.py  forms.py  models.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_alter_customerinsight_options_and_more.py
analytics/templatetags/: analytics_tags.py
config/: __init__.py  base.py  celery.py  development.py  production.py  settings.py  urls.py
core/: urls.py  views.py
kitchen/: admin.py  forms.py  models.py  urls.py  views.py
kitchen/migrations/: 0001_initial.py  0002_alter_cookingstation_options_and_more.py
kitchen/templatetags/: kitchen_tags.py
menu/: admin.py  forms.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_alter_menuitem_options.py
nginx/: nginx.conf
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_discount_options_alter_order_options.py
orders/templatetags/: order_tags.py
restaurants/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_alter_restaurant_options_alter_table_options.py
restaurants/templatetags/: restaurants_tags.py
static/css/: style.css
templates/: base.html
templates/analytics/: base.html  customer_segmentation.html  dashboard.html  menu_analysis.html  nutritional_analytics.html  sales_report.html  (+2 more)
templatetags/: order_tags.py
users/: admin.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
(+98 files in other folders)
