[project]
name = "feastflux"
version = "0.1.0"
description = "Restaurant Management System with Nutritional Analytics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aleksei Konstantinov", email = "sonder1or@yandex.ru"},
]
dependencies = [
    "django>=5.2",
    "psycopg2-binary>=2.9.10",
    "django-redis>=5.3.0",
    "celery>=5.3.4",
    "django-celery-beat>=2.5.0",
    "djangorestframework>=3.14.0",
    "django-filter>=23.2",
    "django-cors-headers>=4.7.0",
    "pillow>=10.0.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "redis>=6.0.0",
    "django-debug-toolbar>=4.2.0",
    "pytest>=7.4.0",
    "pytest-django>=4.5.2",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "flake8>=6.1.0",
    "reportlab>=4.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
